--- a/my-project-client/src/App.css
+++ b/my-project-client/src/App.css
@@ -9,11 +9,11 @@
   text-align: center;
   position: relative;
   top: 100px;
-  left: 20px;
 }
 .match-form {
   text-align: center;
   position: relative;
+  font-family: "Cinzel Decorative", cursive;
 }
 .WolfSelection {
   text-align: center;
@@ -206,6 +206,7 @@ tr:nth-child(odd) {
   text-align: left;
   line-height: 40px;
   font-size: 17px;
+  font-family: "Cinzel Decorative", cursive;
 }
 
 .WolfButtons {
@@ -249,24 +250,25 @@ tr:nth-child(odd) {
 }
 .Rules {
   font-family: "Old Standard TT", serif;
+  width: 90%;
 }
 
 .ScoreButtons {
   /* display: block; */
-  width: 60px;
-  height: 60px;
+  width: 100px;
+  height: 100px;
   /* line-height: 80px; */
   border: solid black 1px;
   border-radius: 50%;
   color: black;
   text-align: center;
   text-decoration: none;
-  background: rgba(255, 255, 255, 0.5);
-  /* background: linear-gradient(
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.8)
+  /* background: rgba(255, 255, 255, 0.5); */
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.7)
     ),
-    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png"); */
+    url("https://i.ibb.co/rtwCDxf/edited-Golf-Ball.png");
 
   background-size: cover;
   /* box-shadow: 0 0 3px gray; */
@@ -284,21 +286,41 @@ tr:nth-child(odd) {
   background: #777555;
 }
 .BackgroundText {
-  z-index: -1;
-  font-size: calc(30px + 10vmin);
-  /* font-family: "Sigmar One", cursive; */
-  /* font-family: "Audiowide", cursive; */
-  /* font-family: "Enriqueta", serif; */
-  /* font-family: "Cousine", monospace; */
-  /* font-family: "Unna", serif; */
-
-  /* font-family: "Sigmar One", cursive; */
-  /* font-family: "Russo One", sans-serif; */
-  display: inline-block;
-  /* text-align: center; */
-  position: absolute;
+  box-sizing: border-box;
+  border-radius: 25px;
   width: 100%;
-  color: #c03221;
+  border: solid #c7c7c7 1px;
+  padding: 10px;
+  position: relative;
+  font-size: calc(20px + 5vmin);
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #f7f7ff;
+
+  background-color: #c03221;
+
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+}
+
+.EnteredBackgroundText {
+  box-sizing: border-box;
+  border-radius: 25px;
+  width: 100%;
+  border: solid #c7c7c7 1px;
+  padding: 10px;
+  position: relative;
+  font-size: calc(20px + 5vmin);
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #343434;
+
+  background-color: #59cd90;
+
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
 }
 
 .p2ScoreButtons {
@@ -395,8 +417,31 @@ tr:nth-child(odd) {
   top: 5px;
 }
 .CreateAccountButton {
+  /* box-sizing: border-box; */
+  color: #0c1d10;
+  border-radius: 5px;
+  /* width: 10%; */
+  border: solid black 1px;
+  padding: 5px;
+  font-size: calc(10px + 1vmin);
+  font-family: "Cinzel Decorative", cursive;
   position: relative;
-  top: 100px;
+  top: 120px;
+  left: 60px;
+
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  /* position: relative;
+  left: 20px; */
+
+  color: black;
 }
 
 .score-form {
@@ -494,6 +539,31 @@ tr:nth-child(odd) {
 
   color: black;
 }
+.rulesbutton {
+  /* box-sizing: border-box; */
+  color: #0c1d10;
+  border-radius: 15px;
+  /* width: 10%; */
+  border: solid black 1px;
+  padding: 5px;
+  font-size: calc(20px + 2vmin);
+  float: left;
+  position: relative;
+  top: 20px;
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  /* position: relative;
+  left: 20px; */
+
+  color: black;
+}
 
 input[type="submit"] {
   /* box-sizing: border-box; */
@@ -520,7 +590,33 @@ input[type="submit"] {
 
   color: black;
 }
-.rulesbutton {
+
+.loginButton {
+  /* box-sizing: border-box; */
+  color: #0c1d10;
+  border-radius: 15px;
+  /* width: 10%; */
+  border: solid black 1px;
+  padding: 5px;
+  font-size: calc(12px + 2vmin);
+  font-family: "Cinzel Decorative", cursive;
+  position: relative;
+  top: 5px;
+  background-image: -webkit-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -moz-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -ms-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: -o-linear-gradient(top, #c9dcb3, #ebf2e3);
+  background-image: linear-gradient(to bottom, #c9dcb3, #ebf2e3);
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  /* position: relative;
+  left: 20px; */
+
+  color: black;
+}
+.inputButton {
   /* box-sizing: border-box; */
 
   border-radius: 15px;
@@ -545,35 +641,34 @@ input[type="submit"] {
   -moz-box-shadow: 0px 1px 3px #666666;
 }
 .player1ScoreContainer {
-  border: solid black 1px;
   padding-top: 2px;
   padding-bottom: 2px;
   position: relative;
-  z-index: 1;
-  text-align: left;
-  background-color: #a2a2a2;
+  /* z-index: 1; */
+
+  background-color: #343434;
 }
 .player2ScoreContainer {
-  border: solid black 1px;
   padding-top: 2px;
   padding-bottom: 2px;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
+  background-color: #343434;
 }
 .player3ScoreContainer {
-  border: solid black 1px;
   padding-top: 2px;
   padding-bottom: 2px;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
   text-align: left;
+  background-color: #343434;
 }
 .player4ScoreContainer {
-  border: solid black 1px;
   padding-top: 2px;
   padding-bottom: 2px;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
+  background-color: #343434;
 }
 
 .App-header {
